@@ -140,7 +140,7 @@ class Backend(AbstractBackend, metaclass=ABCDocstMeta):
 
         conn = HTTPConnection(self.hostname, self.port, proxy=self.proxy,
                               ssl_context=self.ssl_context)
-        conn.timeout = self.options.get('tcp-timeout', 10)
+        conn.timeout = int(self.options.get('tcp-timeout', 10))
 
         headers = CaseInsensitiveDict()
         headers['X-Auth-User'] = self.login
